--- a/Pages/Dialog.razor
+++ b/Pages/Dialog.razor
@@ -19,7 +19,7 @@
 
     private void OnYes()
     {
-        Console.WriteLine("Write to the consold in C# 'Yes ' button selected. ");
+        Console.WriteLine("Write to the console in C# 'Yes ' button selected. ");
         Message = "you clicked the Yes button";
     }
 }
