Updated UI (background-color) in the razor components.

--- a/Pages/Dialog.razor
+++ b/Pages/Dialog.razor
@@ -1,5 +1,5 @@
 ﻿<div class="card" style="width:22rem">
-    <div class="card-body">
+    <div class="card-body" style="background-color:lightblue">
         <h3 class="card-title">@Title</h3>
         <p class="card-text">@ChildContent</p>
         <button @onclick="OnYes">Yes!</button>
