--- a/Pages/HealthApp.razor
+++ b/Pages/HealthApp.razor
@@ -2,7 +2,7 @@
 @using System.Globalization
 
 <div class="card" style="width:22rem">
-    <div class="card-body">
+    <div class="card-body" style="background-color:lightblue">
         <h3 class="card-title">BMI Calculator</h3>
         <p>Date @date</p>
     
